[package]
name = "libasm_tester"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.64.0"
cc = "1.0.79"

[dev-dependencies]
rusty-fork = "0.3.0"

[dependencies]
cty = "0.2.2"
libc = "0.2.139"
rusty-fork = {version = "0.3.0", optional = true}

[features]
"fork" = ["rusty-fork"]
"bonus" = []
