[package]
name = "libasm_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rusty-fork = "0.3.0"

[dependencies]
cty = "0.2.2"
errno = "0.3.9"
libc = "0.2.139"
libloading = "0.8.5"
pretty_assertions = "1.4.1"
rusty-fork = {version = "0.3.0", optional = true}

[features]
"fork" = ["rusty-fork"]
"bonus" = []
